// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item tests should render a link correctly 1`] = `
<span>
  <li>
    <Link
      className="Link"
      replace={false}
      to="/to"
    >
      <span
        className="iconWrapper"
      >
        <Mail
          className="icon"
          size={21}
        />
      </span>
      label
    </Link>
  </li>
</span>
`;

exports[`Item tests should render children correctly 1`] = `
<span>
  <li>
    <a
      className="Link hasChildren"
      onClick={[Function]}
    >
      <span
        className="iconWrapper"
      >
        <Mail
          className="icon"
          size={21}
        />
      </span>
      label
      <ChevronLeft
        className="chevron"
      />
    </a>
    <ul
      className="NestedList"
    >
      <Item
        key="0"
        label="child 1"
        location={
          Object {
            "pathname": "to",
          }
        }
        to="/child1"
      />
      <Item
        key="1"
        label="child 2"
        location={
          Object {
            "pathname": "to",
          }
        }
        to="/child2"
      />
    </ul>
  </li>
</span>
`;
